--- a/sanity/package.json
+++ b/sanity/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "swiggy-clone",
+  "name": "swiggy-clone-v2",
   "private": true,
   "version": "1.0.0",
   "description": "React Native App - Swiggy Clone 2.0",
